# codesync

./: MANIFEST.in  README.md  codesync.py  example.codesync.yaml  pyproject.toml  requirements.txt  setup.cfg
codesync/: __init__.py  cli.py  command.py  config.py  git.py  path.py  worker_pool.py
codesync/provider/: __init__.py  generic.py  github.py  gitlab.py
codesync/provider_config/: __init__.py  generic.py  github.py  gitlab.py
codesync/repo/: repo_worker_pool.py  synced_repo.py
codesync/schemas/: codesync-0.1.json  codesync-0.4.json  codesync-0.7.json  codesync-0.8.json  codesync-0.9.json
codesync_schemas/: codesync-0.2.json  codesync-0.3.json
schemas/: codesync-0.1.json  codesync-0.2.json  codesync-0.4.json  codesync-0.5.json  codesync-0.6.json  codesync-0.7.json
tests/integration/repo/: synced_repo_test.py
