[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3

[project]
name = "codesync"
version = "0.9.0"
dependencies = [
  "PyGithub>=1.55",
  "jsonschema>=4",
  "mergedeep>=1",
  "more-itertools>=9",
  "python-gitlab>=5.6.0",
  "ruyaml>=0.91.0",
]

[project.scripts]
codesync = "codesync.cli:main"
