[metadata]
name = codesync
version = 0.7.1
author = sapslaj
url = https://github.com/sapslaj/codesync

[options]
py_modules = codesync
packages = find:
include_package_data = True
install_requires =
    jsonschema>=4
    mergedeep>=1
    more-itertools>=9
    PyGithub>=1.55
    ruyaml>=0.91.0

[options.entry_points]
console_scripts =
    codesync = codesync:main
