[metadata]
name = codesync
version = 0.9.1
author = sapslaj
url = https://github.com/sapslaj/codesync

[options]
packages = find_namespace:
include_package_data = True
install_requires =
    jsonschema>=4
    mergedeep>=1
    more-itertools>=9
    PyGithub>=1.55
    python-gitlab>=5.6
    ruyaml>=0.91.0

[options.entry_points]
console_scripts =
    codesync = codesync.cli:main

[options.extras_require]
test =
    pytest
